test/scc/expr/semantic-errors/169.t
void test()
{
    __offsetof(struct A, a);
}